--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 	<p>Hello World!</p>
 	<p>I`m Vitali!</p>
+	<p>What do you doing?</p>
 	<script src="js/script.js"></script>
 </body>
 </html>
